# resource-monitoring-system

./: README.md  configuration.env  docker-compose.yml  init-mongo.js
app/: Cargo.toml  Dockerfile
app/src/: main.rs
grafana/dashboards/: dashboard-61.json  telegraf-metrics.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: influxdb.yml
nginx/: nginx.conf
telegraf/etc/: telegraf.conf
testing/: Dockerfile  load_test.sh  load_tester.yml  start-containers.sh
