[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3.0.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
telegraf = "0.6.0"
dotenv = "0.15.0"
cadence = "0.24.0"



